maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:35: error: ';' expected but ')' found.
	ifa==0 &&isDirLibre(Direction.OUEST)){
                                            ^